--- a/c-food-main/app/src/main/res/layout/activity_sign_up.xml
+++ b/c-food-main/app/src/main/res/layout/activity_sign_up.xml
@@ -52,6 +52,7 @@
             android:hint="Full Name">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reg_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text">
@@ -71,6 +72,7 @@
             app:counterMaxLength="15">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reg_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text">
@@ -86,6 +88,7 @@
             android:hint="Email">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reg_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress">
@@ -103,6 +106,7 @@
             android:transitionName="password_tran">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reg_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword">
@@ -113,21 +117,22 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/reg_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#000"
+        android:onClick="registerUser"
         android:text="Go"
-        android:textColor="#fff"
-       >
+        android:textColor="#fff">
 
     </Button>
 
     <Button
+        android:id="@+id/reg_login_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00000000"
-        android:text="Already have an account? LogIn"
-       >
+        android:text="Already have an account? LogIn">
 
     </Button>
 
