--- a/c-food-main/app/src/main/res/layout/activity_login.xml
+++ b/c-food-main/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,7 @@
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:hint="Username"
+
             android:transitionName="username_tran"
             >
 
@@ -56,7 +57,8 @@
                 android:id="@+id/username_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:id="@+id/username_editTextInput"
+                android:inputType="text"
                 />
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
@@ -74,6 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:id="@+id/password_editTextInput"
 
                />
         </com.google.android.material.textfield.TextInputLayout>
