--- a/c-food-main/app/src/main/res/values/preloaded_fonts.xml
+++ b/c-food-main/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/</item>
         <item>@font/antic</item>
+        <item>@font/baloo</item>
         <item>@font/bangers</item>
         <item>@font/bungee</item>
         <item>@font/cherry_swash_bold</item>
