--- a/c-food-main/app/src/main/res/values/styles.xml
+++ b/c-food-main/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowContentTransitions">true</item>
+        <item name="android:statusBarColor">#00000000</item>
     </style>
 
 </resources>
