--- a/c-food-main/app/src/main/res/layout/activity_main.xml
+++ b/c-food-main/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
                             android:fontFamily="@font/croissant_one"
                             android:text="Search"
                             android:textAlignment="center"
-                            android:textSize="24sp" />
+                            android:textSize="20sp" />
 
                         <ImageView
                             android:id="@+id/imageView2"
@@ -143,9 +143,9 @@
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
                             android:fontFamily="@font/croissant_one"
-                            android:text="Like Meal"
+                            android:text="Favourite Meal"
                             android:textAlignment="center"
-                            android:textSize="24sp" />
+                            android:textSize="20sp" />
 
                         <ImageView
                             android:id="@+id/imageView3"
@@ -153,7 +153,7 @@
                             android:layout_height="75dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="15dp"
-                            app:srcCompat="@drawable/icon_like" />
+                            app:srcCompat="@drawable/icon_favorite" />
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -194,7 +194,7 @@
                             android:fontFamily="@font/croissant_one"
                             android:text="Meal"
                             android:textAlignment="center"
-                            android:textSize="24sp" />
+                            android:textSize="20sp" />
 
                         <ImageView
                             android:id="@+id/imageView4"
@@ -229,7 +229,7 @@
                             android:fontFamily="@font/croissant_one"
                             android:text="Category"
                             android:textAlignment="center"
-                            android:textSize="24sp" />
+                            android:textSize="20sp" />
 
                         <ImageView
                             android:id="@+id/imageView5"
