--- a/c-food-main/app/src/main/res/layout/rv_food_item.xml
+++ b/c-food-main/app/src/main/res/layout/rv_food_item.xml
@@ -16,26 +16,33 @@
 
         <LinearLayout
             android:layout_width="150dp"
-            android:layout_marginLeft="5dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/food_name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/cherry_swash_bold"
                 android:text="Food name" />
 
             <TextView
                 android:id="@+id/food_calories"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/cherry_swash_bold"
                 android:text="Calories: " />
         </LinearLayout>
+
         <Button
             android:id="@+id/like_food_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Like"/>
+            android:fontFamily="@font/bungee"
+            android:text="Like"
+            android:textSize="20sp"
+            android:background="@drawable/custom_button"
+            android:textAllCaps="false"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
