--- a/c-food-main/app/src/main/res/layout/activity_search_food.xml
+++ b/c-food-main/app/src/main/res/layout/activity_search_food.xml
@@ -8,8 +8,10 @@
     tools:context=".SearchFoodActivity">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewFoodList"
             android:layout_width="match_parent"
@@ -18,6 +20,23 @@
         </androidx.recyclerview.widget.RecyclerView>
 
     </androidx.core.widget.NestedScrollView>
+
+    <TextView
+        android:id="@+id/search_bar"
+        android:layout_width="411dp"
+        android:layout_height="67dp"
+        android:text="TextView"
+        app:layout_anchor="@+id/nestedScrollView2"
+        app:layout_anchorGravity="center" />
+
+    <Button
+        android:id="@+id/search_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="search"
+        android:onClick="search"
+        app:layout_anchor="@+id/nestedScrollView2"
+        app:layout_anchorGravity="end|top" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
