fix food name text

--- a/c-food-main/app/src/main/res/layout/activity_collapsing_toolbar.xml
+++ b/c-food-main/app/src/main/res/layout/activity_collapsing_toolbar.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             app:contentScrim="@color/colorPrimary"
-            app:title="@string/app_name"
+            app:title="Food name"
             >
 
             <ImageView
