build-detail-food-UI

--- a/c-food-main/app/src/main/res/values/preloaded_fonts.xml
+++ b/c-food-main/app/src/main/res/values/preloaded_fonts.xml
@@ -6,6 +6,7 @@
         <item>@font/baloo</item>
         <item>@font/bangers</item>
         <item>@font/bungee</item>
+        <item>@font/cherry_swash</item>
         <item>@font/cherry_swash_bold</item>
         <item>@font/croissant_one</item>
     </array>
