integrate UI with amplify

--- a/c-food-main/app/src/main/res/layout/activity_find_password.xml
+++ b/c-food-main/app/src/main/res/layout/activity_find_password.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp"
+    tools:context=".ChangePasswordActivity"
     android:background="#f4f6ff"
-    tools:context=".ForgetPasswordActivity">
-
+    android:padding="30dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,68 +15,90 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_return"
-            android:padding="5dp"/>
-
+            android:src="@drawable/icon_return">
+        </ImageView>
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/icon_forgetpassword"
-            >
-
+            android:layout_marginTop="30dp"
+            android:src="@drawable/icon_resetpass">
         </ImageView>
-
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/bungee"
-            android:text="Forget Password"
+            android:text="New Password"
             android:textAlignment="center"
-            android:gravity="center"
-            android:layout_gravity="center"
             android:textAllCaps="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:textColor="#000"
-            android:layout_marginTop="10dp"
-            android:textSize="30sp" />
+            android:textSize="35sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/baloo"
-            android:gravity="center"
-            android:text="Provide username for which you want to reset your password"
+            android:text="Your indentity has been verified! Set your new password"
             android:textAlignment="center"
             android:textSize="18sp" />
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_toRightOf="@+id/image"
+            android:layout_height="wrap_content"
+            android:id="@+id/newpassword"
+            android:layout_marginBottom="10dp"
+            app:passwordToggleEnabled="true"
+            android:hint="OTP"
+            >
+
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/otp_code_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/icon_security"
+                android:drawablePadding="10dp"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:hint="User Name">
+            app:passwordToggleEnabled="true"
+            android:hint="New Password"
+            >
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/username_forgot_password"
+                android:id="@+id/new_password_editText2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/icon_profilename"
+                android:drawableLeft="@drawable/icon_security"
                 android:drawablePadding="10dp"
-                android:textColor="#000" />
+                android:inputType="textPassword"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/check_username_btn"
+            android:id="@+id/confirm_update_password_btn"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#d4f3ef"
             android:fontFamily="@font/bungee"
-            android:text="Next" />
+            android:text="Confirm" />
     </LinearLayout>
 
 </ScrollView>
