--- a/c-food-main/app/src/main/res/layout/change_password.xml
+++ b/c-food-main/app/src/main/res/layout/change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".reset_passwrd_activity"
+    tools:context=".ChangePasswordActivity"
     android:background="#f4f6ff"
     android:padding="30dp">
     <LinearLayout
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/bungee"
-            android:text="New Credentials"
+            android:text="New Password"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:layout_gravity="center"
@@ -37,18 +37,8 @@
             android:textColor="#000"
             android:textSize="35sp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/baloo"
-            android:text="Your indentity has been verified! Set your new password"
-            android:textAlignment="center"
-            android:textSize="18sp" />
 
-
-
-            <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_toRightOf="@+id/image"
@@ -56,11 +46,12 @@
                 android:id="@+id/newpassword"
                 android:layout_marginBottom="10dp"
                 app:passwordToggleEnabled="true"
-                android:hint="New Password"
+                android:hint="Old Password"
                 >
 
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/old_password_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/icon_security"
@@ -77,11 +68,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:passwordToggleEnabled="true"
-            android:hint="Confirm Password"
+            android:hint="New Password"
             >
 
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/new_password_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/icon_security"
@@ -91,12 +83,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/confirm_change_password_btn"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#d4f3ef"
             android:fontFamily="@font/bungee"
-            android:text="OK" />
+            android:text="Confirm" />
     </LinearLayout>
 
 </ScrollView>
