--- a/c-food-main/app/src/main/res/layout/activity_main.xml
+++ b/c-food-main/app/src/main/res/layout/activity_main.xml
@@ -143,7 +143,7 @@
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
                             android:fontFamily="@font/croissant_one"
-                            android:text="Favourite Meal"
+                            android:text="Favourite Food"
                             android:textAlignment="center"
                             android:textSize="20sp" />
 
