build UI categories and refactor

--- a/c-food-main/app/src/main/res/layout/activity_confirm_code.xml
+++ b/c-food-main/app/src/main/res/layout/activity_confirm_code.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".ConfirmCodeActivity"
+    tools:context=".activity.ConfirmCodeActivity"
     android:background="#fff"
     android:padding="20dp">
 
