--- a/c-food-main/app/src/main/res/layout/activity_forget_password.xml
+++ b/c-food-main/app/src/main/res/layout/activity_forget_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="30dp"
     android:background="#f4f6ff"
-    tools:context=".ForgetPasswordActivity">
+    tools:context=".activity.ForgetPasswordActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
