--- a/c-food-main/app/src/main/res/layout/activity_categories.xml
+++ b/c-food-main/app/src/main/res/layout/activity_categories.xml
@@ -4,27 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".activity.SearchFoodActivity"
+    tools:context=".activity.CategoriesActivity"
     android:orientation="vertical">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/search_bar"
-        app:title="Find your food"/>
-
+        app:title="Food categories"/>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewFoodList"
+            android:id="@+id/rv_food_categories"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
+            android:layout_height="match_parent"/>
     </androidx.core.widget.NestedScrollView>
-
 
 </LinearLayout>
