--- a/c-food-main/app/src/main/res/layout/rv_category_item.xml
+++ b/c-food-main/app/src/main/res/layout/rv_category_item.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
-            android:id="@+id/food_image"
+            android:id="@+id/category_image"
             android:layout_width="128dp"
             android:layout_height="128dp"
             android:scaleType="centerCrop"
@@ -24,28 +24,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/food_name_text"
+                android:id="@+id/category_name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/cherry_swash_bold"
-                android:text="Food name" />
+                android:text="Category name" />
 
-            <TextView
-                android:id="@+id/food_calories"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/cherry_swash_bold"
-                android:text="Calories: " />
+
         </LinearLayout>
 
-        <Button
-            android:id="@+id/like_food_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/bungee"
-            android:text="Like"
-            android:textSize="20sp"
-            android:background="@drawable/custom_button"
-            android:textAllCaps="false"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
